--- a/css/style.css
+++ b/css/style.css
@@ -9,5 +9,5 @@
 @import "screen/asset.css";
 
 * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
 }
