--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,11 @@
 @import "components/status-bar.css";
 @import "components/header.css";
 @import "components/navigation-bar.css";
+@import "components/block.css";
 
 /* screen */
 @import "screen/asset.css";
+@import "screen/moneybook.css";
 
 * {
     font-family: 'Noto Sans KR', sans-serif;
