--- a/css/screen/asset.css
+++ b/css/screen/asset.css
@@ -109,13 +109,6 @@
     padding-bottom: 100px;
 }
 
-.blank-box {
-    margin-top: 20px;
-    width: 100%;
-    height: 10px;
-    background-color: gainsboro;
-}
-
 @keyframes iconAnimation {
     0% {
         transform: none;
@@ -130,4 +123,33 @@
 
 .navigation-bar__column:first-child i {
     animation: iconAnimation 1s ease-in-out infinite;
+}
+
+@keyframes splash-screenAnimation {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+.splash-screen {
+    background-color: white;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    animation: splash-screenAnimation 0.4s ease-in-out forwards;
+    animation-delay: 2s;
+}
+
+.splash-screen img {
+    width: 200px;
+    height: 200px;
 }
